--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.20)
 
 project(mystring)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(mystring src/main.cpp src/mystring.hpp src/mystring.cpp)
+add_executable(mystring example/main.cpp library/mystring.hpp library/mystring.cpp)
